# nea-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  release-plz.toml
.github/workflows/: nea-sampler.yml  pullfrog.yml  qc.yml
examples/: air_temperature.rs  four_day_outlook.rs  pm25.rs  psi.rs  rainfall.rs  relative_humidity.rs  twenty_four_hr_forecast.rs  two_hr_forecast.rs  upstream_sampler.rs  uv.rs  weather_lightning.rs  weather_wbgt.rs  wind_direction.rs  wind_speed.rs
examples/common/: mod.rs
openapi/: apply_required_from_samples.py  apply_satay_extensions.py  nea-realtime.openapi.yaml  samples.json
scripts/: apply_required_from_samples.py  run-all-examples.sh
src/: api.rs  lib.rs  types.rs
src/air_temperature/: json.rs  mod.rs  parts.rs
src/four_day_outlook/: json.rs  parts.rs
src/pm25/: json.rs  parts.rs
src/psi/: json.rs  parts.rs
src/rainfall/: json.rs  parts.rs
src/relative_humidity/: json.rs  parts.rs
src/twenty_four_hr_forecast/: json.rs  mod.rs  parts.rs
src/two_hr_forecast/: json.rs  parts.rs
src/uv/: json.rs  parts.rs
src/weather_sub_api/: json.rs  parts.rs
src/wind_direction/: json.rs  parts.rs
src/wind_speed/: json.rs  parts.rs
tests/: deserialize_samples.rs
tests/samples/: air-temperature.json  four-day-outlook.json  pm25.json  psi.json  rainfall.json  relative-humidity.json  twenty-four-hr-forecast.json  two-hr-forecast.json  uv.json  weather-lightning.json  weather-wbgt.json  wind-direction.json  wind-speed.json
