[package]
name = "nea-rs"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
satay-runtime = { version = "0.1.1", default-features = false }
nutype = { version = "0.7", features = ["serde", "regex"] }
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
http = "1"

[features]
default = ["serde", "json"]
serde = ["dep:serde", "satay-runtime/serde"]
json = ["serde", "dep:serde_json", "satay-runtime/json"]

[dev-dependencies]
reqwest = "0.13.3"
satay-reqwest = { path = "../satay-rs/crates/satay-reqwest" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
