[package]
name = "nea-rs"
version = "0.1.0"
edition = "2024"
description = "A type-safe, sans-IO Rust client for Singapore NEA real-time weather and environmental APIs."
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/nea-rs"
homepage = "https://github.com/InfiniteUnion/nea-rs"
repository = "https://github.com/InfiniteUnion/nea-rs"

[lib]

[dependencies]
satay-runtime = { version = "0.1.2", default-features = false }
nutype = { version = "0.7", features = ["serde", "regex"] }
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
http = "1"

[features]
default = ["serde", "json"]
serde = ["dep:serde", "satay-runtime/serde"]
json = ["serde", "dep:serde_json", "satay-runtime/json"]

[dev-dependencies]
reqwest = "0.13.3"
satay-reqwest = { version = "0.1.2" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/zeon256/style-rust-aku", branch = "main" }
]